src/objects/BMCServiceDesk__Advanced_Search_Filter_Criteria__c.object
<CustomObject>
    <description>Stores the criteria defined for advanced search filters in the CMDB list view.</description>
    <fields>
        <fullName>BMCServiceDesk__FKFilter_Name__c</fullName>
        <description>Stores name of the advanced search filter.</description>
        <inlineHelpText>Stores name of the advanced search filter.</inlineHelpText>
        <label>Filter Name</label>
        <referenceTo>BMCServiceDesk__Advanced_Search_Filter__c</referenceTo>
        <relationshipLabel>Advanced Search Filter Criteria</relationshipLabel>
        <relationshipName>Advanced_Search_Filter_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Info__c</fullName>
        <description>Stores API name of the fields used in the filter criteria along with the namespace.</description>
        <inlineHelpText>Stores API name of the fields used in the filter criteria along with the namespace.</inlineHelpText>
        <label>Field Info</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
        <description>Stores the value for grouping operator. For example, the value stored for the AND condition is 1.</description>
        <inlineHelpText>Stores the value for grouping operator. For example, the value stored for the AND condition is 1.</inlineHelpText>
        <label>Grouping Operator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operand__c</fullName>
        <description>Stores the value of filter condition.</description>
        <inlineHelpText>Stores the value of filter condition.</inlineHelpText>
        <label>Operand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operator__c</fullName>
        <description>Stores operators used in the filter criteria. For example, = and LIKE.</description>
        <inlineHelpText>Stores operators used in the filter criteria. For example, = and LIKE.</inlineHelpText>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order_Index__c</fullName>
        <description>Stores the order in which the filter criteria are applied.</description>
        <inlineHelpText>Stores the order in which the filter criteria are applied.</inlineHelpText>
        <label>Order Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Advanced Search Filter Criteria</label>
    <nameField>
        <displayFormat>FC-{0000000000}</displayFormat>
        <label>Filter Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Search Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>